--- a/demo/css/reset.css
+++ b/demo/css/reset.css
@@ -1,10 +1,12 @@
 * {
+  background: transparent;
   border: 0;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+html {
+  font-size: 100%;
 }
 
 img {
@@ -13,8 +15,6 @@ img {
   max-width: 100%;
 }
 
-.container {
-  margin: 2em auto;
-  max-width: 640px;
-  padding: 0 2em;
+button {
+  font: inherit;
 }
