--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -1,3 +1,9 @@
+@mixin resp-max($max-width) {
+  @media screen and (max-width: $max-width) {
+    @content;
+  }
+}
+
 .gallery {
   overflow: hidden;
   height: 480px;
@@ -9,14 +15,18 @@
     list-style: none;
     margin: 0;
     position: absolute;
-    // transition: all 500ms;
     > * {
       float: left;
+      margin-right: 20px;
+      @include resp-max(777px) {
+        width: 208px;
+      }
     }
   }
 
   .gallery-control {
     color: #fff;
+    cursor: pointer;
     position: absolute;
     top: 50%;
     z-index: 1;
